# fastapi-mongodb-example

./: pyproject.toml
mongoex/: run.py
mongoex/sources/: app.py
mongoex/sources/api/: memo.py
mongoex/sources/connections/: database.py
mongoex/sources/dao/: __init__.py  memo.py
mongoex/sources/dto/: memo.py
mongoex/sources/models/: memo.py  mixin.py
