[tool.poetry]
name = "fastmongoexample"
version = "0.1.0"
description = ""
authors = ["NEONKID <clax1412@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
motor = "^2.4.0"
loguru = "^0.5.3"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
